1.调用之前重构出来的方法，我们封装到Injectable中去了，删除toDependencies方法以及他调用的方法